--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vapi-ai/web": "^2.5.2",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
